--- a/configure.in
+++ b/configure.in
@@ -700,7 +700,11 @@ AC_CHECK_COMPILER_WNOFLAG(unused-parameter, [int foo(int bar) { return 0; }])
 AC_CHECK_COMPILER_WFLAG(empty-body)
 AC_CHECK_COMPILER_WNOFLAG(switch)
 AC_CHECK_COMPILER_WNOFLAG(missing-field-initializers)
+AC_MSG_CHECKING([whether compiler is clang])
 if test -n "`$CC --version | grep -i clang`" ; then
+	AC_MSG_RESULT([yes, skipping some flags..])
+else
+	AC_MSG_RESULT([no])
 	AC_CHECK_COMPILER_WNOFLAG(maybe-uninitialized)
 	AC_CHECK_COMPILER_WNOFLAG(clobbered)
 fi
